--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: login_signup_module
-description: A new Flutter project.
+name: register_signin_module
+description: A new Flutter application.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,10 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  shared_preferences: 0.5.4
+  connectivity: 0.4.2
+  device_info: ^0.4.1+4
 
 dev_dependencies:
   flutter_test:
